Updated projects list

--- a/index.html
+++ b/index.html
@@ -16,7 +16,50 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <p>Hello world!</p>
+        <div class="wrapper">
+
+            <h1>Project Index</h1>
+
+            <p>Most recent work 2013-2014.</p>
+
+            <h2>Responsive Websites</h2>
+
+            <ul>
+                <li><a href="http://metropolisinc.com.au/" target="_new">Metropolis Inc.</a> <sup>Metropolis Inc.</sup></li>
+                <li>CBRE Express 2.0 <sup>CBRE (Coming Soon)</sup></li>
+                <li>eLocal Marketing <sup>Metropolis Inc. (Coming Soon)</sup></li>
+                <li><a href="http://vidawestend.com.au/" target="_new">Vida West End</a> <sup>Pointcorp</sup></li>
+                <li><a href="http://darlingpointbyrose.com.au/" target="_new">Darling Point</a> <sup>Rose Group</sup></li>
+                <li><a href="http://1thd.com.au/" target="_new">1 Thomas Holt Drive</a> <sup>AMP Capital</sup></li>
+                <li><a href="http://divercitywaterloo.com.au/" target="_new">Rise at Divercity</a> <sup>Becton</sup></li>
+            </ul>
+
+            <h2>Non-responsive Websites</h2>
+
+            <ul>
+                <li>Aussie Express <sup>Aussie Homeloans (Coming Soon)</sup></li>
+                <li><a href="http://landmarklmk.com.au/" target="_new">Landmark: Local Marketing Kit</a> <sup>Landmark</sup></li>
+                <li><a href="http://biodiversitybusinesspark.com.au/" target="_new">Biodivercity Business Park (Flip Book)</a> <sup>CBRE</sup></li>
+            </ul>
+
+
+            <h2>eDM's</h2>
+
+            <ul>
+                <li><a href="/edm-projects-archive/Atlas - Parkside Coming Soon 2013" target="_new">Atlas: Parkside Coming Soon 2013</a> <sup>Sekisui House</sup></li>
+                <li><a href="/edm-projects-archive/Yukon - Future vision 2013" target="_new">Yukon: Future vision 2013</a> <sup>Sekisui House / Colliers International</sup></li>
+                <li><a href="/edm-projects-archive/Vida Westend - Public launch 2013" target="_new">Vida Westend: Public launch 2013</a> <sup>Pointcorp</sup></li>
+                <li><a href="/edm-projects-archive/La Dolce Vita - Thank you 2013" target="_new">La Dolce Vita: Thank you 2013</a> <sup>Metropolis Inc.</sup></li>
+                <li><a href="/edm-projects-archive/La Dolce Vita - We missed you 2013" target="_new">La Dolce Vita: We missed you 2013</a> <sup>Metropolis Inc.</sup></li>
+                <li><a href="/edm-projects-archive/La Dolce Vita - Party season 2013" target="_new">La Dolce Vita: Party season 2013</a> <sup>Metropolis Inc.</sup></li>
+                <li><a href="/edm-projects-archive/La Dolce Vita - Invite 2013" target="_new">La Dolce Vita: Invite 2013</a> <sup>Metropolis Inc.</sup></li>
+                <li><a href="/edm-projects-archive/Lighthouse Hill - Selling now 2013" target="_new">Lighthouse Hill: Selling now 2013</a> <sup>Rose Group / Cbus Property</sup></li>
+                <li><a href="/edm-projects-archive/Lighthouse Hill - Launch 2013" target="_new">Lighthouse Hill: Launch 2013</a> <sup>Rose Group</sup></li>
+                <li><a href="/edm-projects-archive/The Address - Grand Opening 2013" target="_new">The Address: Grand Opening 2013</a> <sup>Sekisui House</sup></li>
+                <li><a href="/edm-projects-archive/The Address - Big news 2013" target="_new">The Address: Big news 2013</a> <sup>Sekisui House / Colliers International</sup></li>
+            </ul>
+
+        </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
