--- a/index.html
+++ b/index.html
@@ -32,11 +32,14 @@
                 <li><a href="http://darlingpointbyrose.com.au/" target="_new">Darling Point</a> <sup>Rose Group</sup></li>
                 <li><a href="http://1thd.com.au/" target="_new">1 Thomas Holt Drive</a> <sup>AMP Capital</sup></li>
                 <li><a href="http://divercitywaterloo.com.au/" target="_new">Rise at Divercity</a> <sup>Becton</sup></li>
+
             </ul>
 
             <h2>Non-responsive Websites</h2>
 
             <ul>
+                <li><a href="http://momentum.uqbs.com/" target="_new">UQ Business School: Momentum</a> <sup>Univercity of Queensland</sup></li>
+                <li><a href="http://alumni.uqbs.com/" target="_new">UQ Business School: Alumni</a> <sup>Univercity of Queensland</sup></li>
                 <li>Aussie Express <sup>Aussie Homeloans (Coming Soon)</sup></li>
                 <li><a href="http://landmarklmk.com.au/" target="_new">Landmark: Local Marketing Kit</a> <sup>Landmark</sup></li>
                 <li><a href="http://biodiversitybusinesspark.com.au/" target="_new">Biodivercity Business Park (Flip Book)</a> <sup>CBRE</sup></li>
