Added blog post

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                 <li><a href="http://biodiversitybusinesspark.com.au/" target="_new">Biodivercity Business Park (Flip Book)</a> <sup>CBRE</sup></li>
             </ul>
 
+            <h2>Blog Posts</h2>
+
+            <ul>
+                <li><a href="http://metropolisinc.com.au/blog-inc/an-app-for-apps-sake/" target="_new">An App for App’s Sake?</a></li>
+            </ul>
+
 
             <h2>eDM's</h2>
 
