--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@
                 <li><a href="/edm-projects-archive/The Address - Grand Opening 2013" target="_new">The Address: Grand Opening 2013</a> <sup>Sekisui House</sup></li>
                 <li><a href="/edm-projects-archive/The Address - Big news 2013" target="_new">The Address: Big news 2013</a> <sup>Sekisui House / Colliers International</sup></li>
             </ul>
-
+            
+            <h2>Repo's &amp; Experiments</h2>
+            
+            <ul>
+                <li><a href="http://github.com/EddyRespondek/" target="_new">Github</li>
+            </ul>
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
