Added CodePen experiment

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             
             <ul>
                 <li><a href="http://github.com/EddyRespondek/" target="_new">Github</li>
+                <li><a href="http://codepen.io/EddyRespondek/pen/yrhJt" target="_new">CodePen: Pure CSS Aspect Ratio</li>
             </ul>
         </div>
 
