--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <h2>Repo's &amp; Experiments</h2>
             
             <ul>
-                <li><a href="http://github.com/EddyRespondek/" target="_new">Github</li>
+                <li><a href="http://github.com/EddyRespondek/" target="_new">Github</a></li>
                 <li><a href="http://codepen.io/EddyRespondek/pen/yrhJt" target="_new">CodePen: Pure CSS Aspect Ratio</a></li>
             </ul>
         </div>
