Added CodePen experiment

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <ul>
                 <li><a href="http://github.com/EddyRespondek/" target="_new">Github</a></li>
                 <li><a href="http://codepen.io/EddyRespondek/pen/yrhJt" target="_new">CodePen: Pure CSS Aspect Ratio</a></li>
+                <li><a href="http://codepen.io/EddyRespondek/pen/tflIG" target="_new">CodePen: Redacted Text</a></li>
             </ul>
         </div>
 
