--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
             <ul>
                 <li><a href="http://metropolisinc.com.au/" target="_new">Metropolis Inc.</a> <sup>Metropolis Inc.</sup></li>
-                <li>CBRE Express 2.0 <sup>CBRE (Coming Soon)</sup></li>
                 <li>eLocal Marketing <sup>Metropolis Inc. (Coming Soon)</sup></li>
                 <li><a href="http://vidawestend.com.au/" target="_new">Vida West End</a> <sup>Pointcorp</sup></li>
                 <li><a href="http://darlingpointbyrose.com.au/interiors/" target="_new">Darling Point</a> <sup>Rose Group</sup></li>
                 <li><a href="http://rosegroup.com.au/" target="_new">Rose Group</a> <sup>Rose Group</sup></li>
+                <li><a href="http://cbreexpress.hostmetro.com.au/" target="_new">CBRE Express 2.0</a> <sup>CBRE</sup></li>
                 <li><a href="http://1thd.com.au/" target="_new">1 Thomas Holt Drive</a> <sup>AMP Capital</sup></li>
                 <li><a href="http://divercitywaterloo.com.au/" target="_new">Rise at Divercity</a> <sup>Becton</sup></li>
 
@@ -41,9 +41,14 @@
             <ul>
                 <li><a href="http://momentum.uqbs.com/" target="_new">UQ Business School: Momentum</a> <sup>Univercity of Queensland</sup></li>
                 <li><a href="http://alumni.uqbs.com/" target="_new">UQ Business School: Alumni</a> <sup>Univercity of Queensland</sup></li>
-                <li>Aussie Express <sup>Aussie Homeloans (Coming Soon)</sup></li>
-                <li><a href="http://landmarklmk.com.au/" target="_new">Landmark: Local Marketing Kit</a> <sup>Landmark</sup></li>
                 <li><a href="http://biodiversitybusinesspark.com.au/" target="_new">Biodivercity Business Park (Flip Book)</a> <sup>CBRE</sup></li>
+            </ul>
+
+            <h2>Front End Ruby on Rails projects</h2>
+
+            <ul>
+            	<li><a href="http://aussieexpress.com.au/" target="_new">Aussie Express</a> <sup>Aussie Homeloans</sup></li>
+                <li><a href="http://landmarklmk.com.au/" target="_new">Landmark: Local Marketing Kit</a> <sup>Landmark</sup></li>
             </ul>
 
             <h2>Blog Posts</h2>
