--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
                 <li><a href="http://vidawestend.com.au/" target="_new">Vida West End</a> <sup>Pointcorp</sup></li>
                 <li><a href="http://darlingpointbyrose.com.au/interiors/" target="_new">Darling Point</a> <sup>Rose Group</sup></li>
                 <li><a href="http://rosegroup.com.au/" target="_new">Rose Group</a> <sup>Rose Group</sup></li>
-                <li><a href="http://cbreexpress.hostmetro.com.au/" target="_new">CBRE Express 2.0</a> <sup>CBRE</sup></li>
+                <li><a href="http://cbreexpress.com.au/" target="_new">CBRE Express 2.0</a> <sup>CBRE</sup></li>
                 <li><a href="http://1thd.com.au/" target="_new">1 Thomas Holt Drive</a> <sup>AMP Capital</sup></li>
                 <li><a href="http://divercitywaterloo.com.au/" target="_new">Rise at Divercity</a> <sup>Becton</sup></li>
-
             </ul>
 
             <h2>Non-responsive Websites</h2>
 
             <ul>
+            	<li><a href="http://ausingroup.com.au/" target="_new">Ausin Group Australia</a> <sup>Ausin Group</sup></li>
                 <li><a href="http://momentum.uqbs.com/" target="_new">UQ Business School: Momentum</a> <sup>Univercity of Queensland</sup></li>
                 <li><a href="http://alumni.uqbs.com/" target="_new">UQ Business School: Alumni</a> <sup>Univercity of Queensland</sup></li>
                 <li><a href="http://biodiversitybusinesspark.com.au/" target="_new">Biodivercity Business Park (Flip Book)</a> <sup>CBRE</sup></li>
@@ -57,8 +57,13 @@
                 <li><a href="http://metropolisinc.com.au/blog-inc/an-app-for-apps-sake/" target="_new">An App for App’s Sake?</a></li>
             </ul>
 
+            <h2>Responsive eDM's</h2>
 
-            <h2>eDM's</h2>
+            <ul>
+                <li><a href="/edm-projects-archive/Thinc - Best in Class 2014" target="_new">Thinc. Best in Class 2014</a> <sup>Sekisui House</sup></li>
+            </ul>
+
+            <h2>Non-responsive eDM's</h2>
 
             <ul>
                 <li><a href="/edm-projects-archive/Atlas - Parkside Coming Soon 2013" target="_new">Atlas: Parkside Coming Soon 2013</a> <sup>Sekisui House</sup></li>
