--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <h2>Responsive Websites</h2>
 
             <ul>
+            	<li><a href="http://werringtonpark.com.au/" target="_new">Werrington Business Park</a> <sup>UWS</sup></li>
                 <li><a href="http://metropolisinc.com.au/" target="_new">Metropolis Inc.</a> <sup>Metropolis Inc.</sup></li>
                 <li>eLocal Marketing <sup>Metropolis Inc. (Coming Soon)</sup></li>
                 <li><a href="http://vidawestend.com.au/" target="_new">Vida West End</a> <sup>Pointcorp</sup></li>
@@ -54,13 +55,14 @@
             <h2>Blog Posts</h2>
 
             <ul>
+            	<li><a href="http://metropolisinc.com.au/blog-inc/4-website-must-haves/" target="_new">Best in Class: 4 Website must haves</a></li>
                 <li><a href="http://metropolisinc.com.au/blog-inc/an-app-for-apps-sake/" target="_new">An App for App’s Sake?</a></li>
             </ul>
 
             <h2>Responsive eDM's</h2>
 
             <ul>
-                <li><a href="/edm-projects-archive/Thinc - Best in Class 2014" target="_new">Thinc. Best in Class 2014</a> <sup>Sekisui House</sup></li>
+                <li><a href="/edm-projects-archive/Thinc - Best in Class 2014" target="_new">Thinc. Best in Class 2014</a> <sup>Metropolis Inc.</sup></li>
             </ul>
 
             <h2>Non-responsive eDM's</h2>
