--- a/index.html
+++ b/index.html
@@ -25,68 +25,68 @@
             <h2>Responsive Websites</h2>
 
             <ul>
-            	<li><a href="http://werringtonpark.com.au/" target="_blank">Werrington Business Park</a> <sup>UWS</sup></li>
-                <li><a href="http://metropolisinc.com.au/" target="_blank">Metropolis Inc.</a> <sup>Metropolis Inc.</sup></li>
+            	<li><a href="http://werringtonpark.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Werrington Business Park');">Werrington Business Park</a> <sup>UWS</sup></li>
+                <li><a href="http://metropolisinc.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Metropolis Inc.');">Metropolis Inc.</a> <sup>Metropolis Inc.</sup></li>
                 <li>eLocal Marketing <sup>Metropolis Inc. (Coming Soon)</sup></li>
-                <li><a href="http://vidawestend.com.au/" target="_blank">Vida West End</a> <sup>Pointcorp</sup></li>
-                <li><a href="http://darlingpointbyrose.com.au/interiors/" target="_blank">Darling Point</a> <sup>Rose Group</sup></li>
-                <li><a href="http://rosegroup.com.au/" target="_blank">Rose Group</a> <sup>Rose Group</sup></li>
-                <li><a href="http://cbreexpress.com.au/" target="_blank">CBRE Express 2.0</a> <sup>CBRE</sup></li>
-                <li><a href="http://1thd.com.au/" target="_blank">1 Thomas Holt Drive</a> <sup>AMP Capital</sup></li>
-                <li><a href="http://divercitywaterloo.com.au/" target="_blank">Rise at Divercity</a> <sup>Becton</sup></li>
+                <li><a href="http://vidawestend.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Vida West End');">Vida West End</a> <sup>Pointcorp</sup></li>
+                <li><a href="http://darlingpointbyrose.com.au/interiors/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Darling Point');">Darling Point</a> <sup>Rose Group</sup></li>
+                <li><a href="http://rosegroup.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Rose Group');">Rose Group</a> <sup>Rose Group</sup></li>
+                <li><a href="http://cbreexpress.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'CBRE Express 2.0');">CBRE Express 2.0</a> <sup>CBRE</sup></li>
+                <li><a href="http://1thd.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', '1 Thomas Holt Drive');">1 Thomas Holt Drive</a> <sup>AMP Capital</sup></li>
+                <li><a href="http://divercitywaterloo.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Rise at Divercity');">Rise at Divercity</a> <sup>Becton</sup></li>
             </ul>
 
             <h2>Non-responsive Websites</h2>
 
             <ul>
-            	<li><a href="http://ausingroup.com.au/" target="_blank">Ausin Group Australia</a> <sup>Ausin Group</sup></li>
-                <li><a href="http://momentum.uqbs.com/" target="_blank">UQ Business School: Momentum</a> <sup>Univercity of Queensland</sup></li>
-                <li><a href="http://alumni.uqbs.com/" target="_blank">UQ Business School: Alumni</a> <sup>Univercity of Queensland</sup></li>
-                <li><a href="http://biodiversitybusinesspark.com.au/" target="_blank">Biodivercity Business Park (Flip Book)</a> <sup>CBRE</sup></li>
+            	<li><a href="http://ausingroup.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Ausin Group Australia');">Ausin Group Australia</a> <sup>Ausin Group</sup></li>
+                <li><a href="http://momentum.uqbs.com/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'UQ Business School: Momentum');">UQ Business School: Momentum</a> <sup>Univercity of Queensland</sup></li>
+                <li><a href="http://alumni.uqbs.com/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'UQ Business School: Alumni');">UQ Business School: Alumni</a> <sup>Univercity of Queensland</sup></li>
+                <li><a href="http://biodiversitybusinesspark.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Biodivercity Business Park');">Biodivercity Business Park (Flip Book)</a> <sup>CBRE</sup></li>
             </ul>
 
             <h2>Front End Ruby on Rails projects</h2>
 
             <ul>
-            	<li><a href="http://aussieexpress.com.au/" target="_blank">Aussie Express</a> <sup>Aussie Homeloans</sup></li>
-                <li><a href="http://landmarklmk.com.au/" target="_blank">Landmark: Local Marketing Kit</a> <sup>Landmark</sup></li>
+            	<li><a href="http://aussieexpress.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Aussie Express');">Aussie Express</a> <sup>Aussie Homeloans</sup></li>
+                <li><a href="http://landmarklmk.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Landmark: Local Marketing Kit');">Landmark: Local Marketing Kit</a> <sup>Landmark</sup></li>
             </ul>
 
             <h2>Blog Posts</h2>
 
             <ul>
-            	<li><a href="http://metropolisinc.com.au/blog-inc/4-website-must-haves/" target="_blank">Best in Class: 4 Website must haves</a></li>
-                <li><a href="http://metropolisinc.com.au/blog-inc/an-app-for-apps-sake/" target="_blank">An App for App’s Sake?</a></li>
+            	<li><a href="http://metropolisinc.com.au/blog-inc/4-website-must-haves/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Best in Class: 4 Website must haves');">Best in Class: 4 Website must haves</a></li>
+                <li><a href="http://metropolisinc.com.au/blog-inc/an-app-for-apps-sake/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'An App for App’s Sake?');">An App for App’s Sake?</a></li>
             </ul>
 
             <h2>Responsive eDM's</h2>
 
             <ul>
-                <li><a href="/edm-projects-archive/Thinc - Best in Class 2014" target="_blank">Thinc. Best in Class 2014</a> <sup>Metropolis Inc.</sup></li>
+                <li><a href="/edm-projects-archive/Thinc - Best in Class 2014" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Thinc. Best in Class 2014');">Thinc. Best in Class 2014</a> <sup>Metropolis Inc.</sup></li>
             </ul>
 
             <h2>Non-responsive eDM's</h2>
 
             <ul>
-                <li><a href="/edm-projects-archive/Atlas - Parkside Coming Soon 2013" target="_blank">Atlas: Parkside Coming Soon 2013</a> <sup>Sekisui House</sup></li>
-                <li><a href="/edm-projects-archive/Yukon - Future vision 2013" target="_blank">Yukon: Future vision 2013</a> <sup>Sekisui House / Colliers International</sup></li>
-                <li><a href="/edm-projects-archive/Vida Westend - Public launch 2013" target="_blank">Vida Westend: Public launch 2013</a> <sup>Pointcorp</sup></li>
-                <li><a href="/edm-projects-archive/La Dolce Vita - Thank you 2013" target="_blank">La Dolce Vita: Thank you 2013</a> <sup>Metropolis Inc.</sup></li>
-                <li><a href="/edm-projects-archive/La Dolce Vita - We missed you 2013" target="_blank">La Dolce Vita: We missed you 2013</a> <sup>Metropolis Inc.</sup></li>
-                <li><a href="/edm-projects-archive/La Dolce Vita - Party season 2013" target="_blank">La Dolce Vita: Party season 2013</a> <sup>Metropolis Inc.</sup></li>
-                <li><a href="/edm-projects-archive/La Dolce Vita - Invite 2013" target="_blank">La Dolce Vita: Invite 2013</a> <sup>Metropolis Inc.</sup></li>
-                <li><a href="/edm-projects-archive/Lighthouse Hill - Selling now 2013" target="_blank">Lighthouse Hill: Selling now 2013</a> <sup>Rose Group / Cbus Property</sup></li>
-                <li><a href="/edm-projects-archive/Lighthouse Hill - Launch 2013" target="_blank">Lighthouse Hill: Launch 2013</a> <sup>Rose Group</sup></li>
-                <li><a href="/edm-projects-archive/The Address - Grand Opening 2013" target="_blank">The Address: Grand Opening 2013</a> <sup>Sekisui House</sup></li>
-                <li><a href="/edm-projects-archive/The Address - Big news 2013" target="_blank">The Address: Big news 2013</a> <sup>Sekisui House / Colliers International</sup></li>
+                <li><a href="/edm-projects-archive/Atlas - Parkside Coming Soon 2013" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Atlas: Parkside Coming Soon 2013');">Atlas: Parkside Coming Soon 2013</a> <sup>Sekisui House</sup></li>
+                <li><a href="/edm-projects-archive/Yukon - Future vision 2013" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Yukon: Future vision 2013');">Yukon: Future vision 2013</a> <sup>Sekisui House / Colliers International</sup></li>
+                <li><a href="/edm-projects-archive/Vida Westend - Public launch 2013" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Vida Westend: Public launch 2013');">Vida Westend: Public launch 2013</a> <sup>Pointcorp</sup></li>
+                <li><a href="/edm-projects-archive/La Dolce Vita - Thank you 2013" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'La Dolce Vita: Thank you 2013');">La Dolce Vita: Thank you 2013</a> <sup>Metropolis Inc.</sup></li>
+                <li><a href="/edm-projects-archive/La Dolce Vita - We missed you 2013" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'La Dolce Vita: We missed you 2013');">La Dolce Vita: We missed you 2013</a> <sup>Metropolis Inc.</sup></li>
+                <li><a href="/edm-projects-archive/La Dolce Vita - Party season 2013" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'La Dolce Vita: Party season 2013');">La Dolce Vita: Party season 2013</a> <sup>Metropolis Inc.</sup></li>
+                <li><a href="/edm-projects-archive/La Dolce Vita - Invite 2013" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'La Dolce Vita: Invite 2013');">La Dolce Vita: Invite 2013</a> <sup>Metropolis Inc.</sup></li>
+                <li><a href="/edm-projects-archive/Lighthouse Hill - Selling now 2013" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Lighthouse Hill: Selling now 2013');">Lighthouse Hill: Selling now 2013</a> <sup>Rose Group / Cbus Property</sup></li>
+                <li><a href="/edm-projects-archive/Lighthouse Hill - Launch 2013" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Lighthouse Hill: Launch 2013');">Lighthouse Hill: Launch 2013</a> <sup>Rose Group</sup></li>
+                <li><a href="/edm-projects-archive/The Address - Grand Opening 2013" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'The Address: Grand Opening 2013');">The Address: Grand Opening 2013</a> <sup>Sekisui House</sup></li>
+                <li><a href="/edm-projects-archive/The Address - Big news 2013" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'The Address: Big news 2013');">The Address: Big news 2013</a> <sup>Sekisui House / Colliers International</sup></li>
             </ul>
             
             <h2>Repo's &amp; Experiments</h2>
             
             <ul>
-                <li><a href="http://github.com/EddyRespondek/" target="_blank">Github</a></li>
-                <li><a href="http://codepen.io/EddyRespondek/pen/yrhJt" target="_blank">CodePen: Pure CSS Aspect Ratio</a></li>
-                <li><a href="http://codepen.io/EddyRespondek/pen/tflIG" target="_blank">CodePen: Redacted Text</a></li>
+                <li><a href="http://github.com/EddyRespondek/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Github');">Github</a></li>
+                <li><a href="http://codepen.io/EddyRespondek/pen/yrhJt" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'CodePen: Pure CSS Aspect Ratio');">CodePen: Pure CSS Aspect Ratio</a></li>
+                <li><a href="http://codepen.io/EddyRespondek/pen/tflIG" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'CodePen: Redacted Text');">CodePen: Redacted Text</a></li>
             </ul>
         </div>
 
