--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <h2>Responsive Websites</h2>
 
             <ul>
+                <li><a href="http://highgatedemo.hostmetro.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'The Highgate');">The Highgate</a> <sup>Pointcorp</sup></li>
+                <li><a href="http://bardondesign.com/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Bardon Design');">Bardon Design</a> <sup>Bardon Design</sup></li>
+                <li><a href="http://www.aragroup.com.au/blog/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'ARA Group Blog');">ARA Group Blog</a> <sup>ARA Group</sup></li>
+                <li><a href="http://campaigns.dexus.com/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Dexus');">Dexus Campaigns</a> <sup>Dexus</sup></li>
             	<li><a href="http://werringtonpark.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Werrington Business Park');">Werrington Business Park</a> <sup>UWS</sup></li>
                 <li><a href="http://metropolisinc.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Metropolis Inc.');">Metropolis Inc.</a> <sup>Metropolis Inc.</sup></li>
                 <li>eLocal Marketing <sup>Metropolis Inc. (Coming Soon)</sup></li>
@@ -39,6 +43,7 @@
             <h2>Non-responsive Websites</h2>
 
             <ul>
+                <li><a href="http://btequityincome.btim.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'BT Equity Income');">BT Equity Income</a> <sup>BTIM</sup></li>
             	<li><a href="http://ausingroup.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Ausin Group Australia');">Ausin Group Australia</a> <sup>Ausin Group</sup></li>
                 <li><a href="http://momentum.uqbs.com/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'UQ Business School: Momentum');">UQ Business School: Momentum</a> <sup>Univercity of Queensland</sup></li>
                 <li><a href="http://alumni.uqbs.com/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'UQ Business School: Alumni');">UQ Business School: Alumni</a> <sup>Univercity of Queensland</sup></li>
