--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2>Responsive Websites</h2>
 
             <ul>
-                <li><a href="http://highgatedemo.hostmetro.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'The Highgate');">The Highgate</a> <sup>Pointcorp</sup></li>
+                <li><a href="http://thehighgate.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'The Highgate');">The Highgate</a> <sup>Pointcorp</sup></li>
                 <li><a href="http://bardondesign.com/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Bardon Design');">Bardon Design</a> <sup>Bardon Design</sup></li>
                 <li><a href="http://www.aragroup.com.au/blog/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'ARA Group Blog');">ARA Group Blog</a> <sup>ARA Group</sup></li>
                 <li><a href="http://campaigns.dexus.com/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Dexus');">Dexus Campaigns</a> <sup>Dexus</sup></li>
