--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <h2>Responsive Websites</h2>
 
             <ul>
+                <li><a href="http://infinitybakery.matterdev3.com/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Infinity Bakery');">Infinity Bakery</a></li>
                 <li><a href="http://thehighgate.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'The Highgate');">The Highgate</a> <sup>Pointcorp</sup></li>
                 <li><a href="http://bardondesign.com/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Bardon Design');">Bardon Design</a> <sup>Bardon Design</sup></li>
                 <li><a href="http://www.aragroup.com.au/blog/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'ARA Group Blog');">ARA Group Blog</a> <sup>ARA Group</sup></li>
@@ -34,7 +35,7 @@
                 <li>eLocal Marketing <sup>Metropolis Inc. (Coming Soon)</sup></li>
                 <li><a href="http://vidawestend.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Vida West End');">Vida West End</a> <sup>Pointcorp</sup></li>
                 <li><a href="http://darlingpointbyrose.com.au/interiors/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Darling Point');">Darling Point</a> <sup>Rose Group</sup></li>
-                <li><a href="http://rosegroup.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Rose Group');">Rose Group</a> <sup>Rose Group</sup></li>
+                <li><a href="http://rosegroup.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Rose Group');">Rose Group</a></li>
                 <li><a href="http://cbreexpress.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'CBRE Express 2.0');">CBRE Express 2.0</a> <sup>CBRE</sup></li>
                 <li><a href="http://1thd.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', '1 Thomas Holt Drive');">1 Thomas Holt Drive</a> <sup>AMP Capital</sup></li>
                 <li><a href="http://divercitywaterloo.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Rise at Divercity');">Rise at Divercity</a> <sup>Becton</sup></li>
@@ -47,6 +48,7 @@
             	<li><a href="http://ausingroup.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Ausin Group Australia');">Ausin Group Australia</a> <sup>Ausin Group</sup></li>
                 <li><a href="http://momentum.uqbs.com/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'UQ Business School: Momentum');">UQ Business School: Momentum</a> <sup>Univercity of Queensland</sup></li>
                 <li><a href="http://alumni.uqbs.com/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'UQ Business School: Alumni');">UQ Business School: Alumni</a> <sup>Univercity of Queensland</sup></li>
+                <li><a href="http://summerhillflourmill.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Summer Hill Flour Mill ROI');">Summer Hill Flour Mill</a> <sup>Colliers</sup></li>
                 <li><a href="http://biodiversitybusinesspark.com.au/" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Biodivercity Business Park');">Biodivercity Business Park (Flip Book)</a> <sup>CBRE</sup></li>
             </ul>
 
