--- a/index.html
+++ b/index.html
@@ -69,12 +69,16 @@
             <h2>Responsive eDM's</h2>
 
             <ul>
+                <li><a href="/edm-projects-archive/Connor - CentralPark 2014" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Connor - CentralPark 2014');">Connor: CentralPark 2014</a> <sup>Frasers Property / Sekisui House</sup></li>
                 <li><a href="/edm-projects-archive/Thinc - Best in Class 2014" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Thinc. Best in Class 2014');">Thinc. Best in Class 2014</a> <sup>Metropolis Inc.</sup></li>
             </ul>
 
             <h2>Non-responsive eDM's</h2>
 
             <ul>
+                <li><a href="/edm-projects-archive/Catalina - A Timeless Elegance 2014" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Cataline: A Timeless Elegance 2014');">Catalina: A Timeless Elegance 2014</a> <sup>Rose Group</sup></li>
+                <li><a href="/edm-projects-archive/Vermont - 2014" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Vermont: 2014');">Vermont: 2014</a> <sup>Rose Group</sup></li>
+                <li><a href="/edm-projects-archive/Sky - OneCentralPark 2014" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Sky: OneCentralPark 2014');">Sky: OneCentralPark 2014</a> <sup>Frasers Property</sup></li>
                 <li><a href="/edm-projects-archive/Atlas - Parkside Coming Soon 2013" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Atlas: Parkside Coming Soon 2013');">Atlas: Parkside Coming Soon 2013</a> <sup>Sekisui House</sup></li>
                 <li><a href="/edm-projects-archive/Yukon - Future vision 2013" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Yukon: Future vision 2013');">Yukon: Future vision 2013</a> <sup>Sekisui House / Colliers International</sup></li>
                 <li><a href="/edm-projects-archive/Vida Westend - Public launch 2013" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Vida Westend: Public launch 2013');">Vida Westend: Public launch 2013</a> <sup>Pointcorp</sup></li>
