--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
             <h2>Responsive eDM's</h2>
 
             <ul>
-                <li><a href="/edm-projects-archive/Connor - CentralPark 2014" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Connor - CentralPark 2014');">Connor: CentralPark 2014</a> <sup>Frasers Property / Sekisui House</sup></li>
+                <li><a href="/edm-projects-archive/Connor - CentralPark 2014" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Connor: CentralPark 2014');">Connor: CentralPark 2014</a> <sup>Frasers Property / Sekisui House</sup></li>
+                <li><a href="/edm-projects-archive/Meander - Thank you for subscribing 2014" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Meander: Thank you for subscribing 2014');">Meander: Thank you for subscribing 2014</a> <sup>Meandher</sup></li>
                 <li><a href="/edm-projects-archive/Thinc - Best in Class 2014" target="_blank" onClick="ga('send', 'event', 'outbound', 'link', 'Thinc. Best in Class 2014');">Thinc. Best in Class 2014</a> <sup>Metropolis Inc.</sup></li>
             </ul>
 
