--- a/index.html
+++ b/index.html
@@ -12,26 +12,13 @@
         <link rel="stylesheet" href="css/main.css">
 
         <script src="js/vendor/modernizr-2.7.1.min.js"></script>
-
-        <script type="text/javascript">
-    (function() {
-        var path = '//easy.myfonts.net/v2/js?sid=267444(font-family=Galano+Classic+Alt)&sid=267448(font-family=Galano+Classic+Bold)&sid=267455(font-family=Galano+Classic+Extra+Light)&sid=267461(font-family=Galano+Classic+Medium)&key=xBy9cz1wue',
-            protocol = ('https:' == document.location.protocol ? 'https:' : 'http:'),
-            trial = document.createElement('script');
-        trial.type = 'text/javascript';
-        trial.async = true;
-        trial.src = protocol + path;
-        var head = document.getElementsByTagName("head")[0];
-        head.appendChild(trial);
-    })();
-</script>
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <div class="wrapper">
+        <div class="wrapper" style="display: none;">
 
             <h2>Front End Ruby on Rails projects</h2>
 
@@ -423,8 +410,18 @@
                     <div class="bar bar-c"></div>
                 </div>
                 -->
+
+                <!--
+                <div class="logo-2">
+                    <div class="bar bar-a"><div class="inner"></div></div>
+                    <div class="bar bar-b"><div class="inner"></div></div>
+                    <div class="bar bar-c"><div class="inner"></div></div>
+                </div>
+                -->
             </div>
         </div>
+
+        <!--
         <div class="skills wrap-lightgrey">
             <div class="wrapper">
                 <h1>I build things</h1>
@@ -453,19 +450,11 @@
                 </ul>
             </div>
 
-            <!--
-            <div class="logo-2">
-                <div class="bar bar-a"><div class="inner"></div></div>
-                <div class="bar bar-b"><div class="inner"></div></div>
-                <div class="bar bar-c"><div class="inner"></div></div>
-            </div>
-            -->
+            
         </div>
         <div class="clients wrap-white">
             <div class="wrapper">
                 <h1>Happy Clients</h1>
-
-                <p>A powerful set of opentype features like case sensitive shapes, oldstyle<br>figures, tabular figures, sub and superscript enables Galano Classic<br>to adopt to every surrounding.</p>
 
                 <p>
                     Infinity<br/>
@@ -482,7 +471,12 @@
                     BTIM<br />
                     Ausin Group<br />
                     University of Queensland<br />
-                    Colliers
+                    Colliers<br />
+                    Aussie<br />
+                    Landmark<br />
+                    Frasers Property<br />
+                    Sekisui House<br />
+                    Meandher
                 </p>
             </div>
         </div>
@@ -491,6 +485,8 @@
                 <h1>Proud Member Of</h1>
             </div>
         </div>
+        -->
+
         <div class="contact wrap-darkgrey">
             <div class="wrapper">
                 <h1>Contact Me</h1>
